testdata/golden/sema/invalid/fn_return_type_mismatch.sg
// scenario: returned expression type does not match the function signature
fn wrong_return() -> int {
    return "nope";
}
